--- a/css/chip.css
+++ b/css/chip.css
@@ -82,7 +82,7 @@ a {
 h1 {
 	font-size: 4rem;
 	text-align: center;
-	margin: 0;
+	margin: 3rem 0;
 	color: var(--accent-color);
 }
 
@@ -251,6 +251,12 @@ nn-dropdown {
 	}
 }
 
+header {
+	img {
+		width: 100%;
+	}
+}
+
 .chip-design {
 	display: block;
 	position: relative;
@@ -272,8 +278,59 @@ nn-dropdown {
 	}
 }
 
-header {
-	img {
+.chip-credits {
+	section {
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+	}
+
+	article {
 		width: 100%;
+		border: 1px solid var(--border-color);
+		border-radius: 10px;
+		padding: 1rem;
+		background-color: #253b40;
+		transition: background-color ease-in-out 200ms;
+
+		.description {
+			display: flex;
+			flex-direction: column;
+			gap: 1rem;
+			align-items: flex-start;
+			padding-inline: 1rem 0;
+		}
+
+		&:hover {
+			background-color: #253b4096;
+		}
+
+		nn-fila {
+			justify-content: center;
+			align-items: center;
+		}
+
+		/* &:nth-child(even) {
+			nn-fila {
+				flex-direction: row-reverse;
+				.description {
+					align-items: flex-end;
+					padding-inline: 0 1rem;
+				}
+			}
+		} */
+	}
+}
+
+@media (max-width: 992px) {
+	.chip-credits {
+		article {
+			text-align: center;
+			.description {
+				align-items: center !important;
+				padding: 0;
+				padding-block-start: 1rem;
+			}
+		}
 	}
 }
