--- a/css/chip.css
+++ b/css/chip.css
@@ -109,7 +109,7 @@ main {
 }
 
 nn-dropdown {
-	--nn-dropdown-btn-color: var(--header-color);
+	--nn-dropdown-btn-color: var(--accent-color);
 	--nn-dropdown-btn-bgcolor: var(--background-color);
 
 	.dropdown-trigger {
@@ -251,9 +251,21 @@ nn-dropdown {
 	}
 }
 
-header {
-	img {
+.chip-home {
+	header {
+		background-color: #3d3d60;
+		display: flex;
 		width: 100%;
+		min-height: 400px;
+		height: 100vh;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+		gap: 1rem;
+
+		img {
+			/* width: 100%; */
+		}
 	}
 }
 
